name:                xavio
version:             0.0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/xldenis/xavio#readme
license:             BSD3
license-file:        LICENSE
author:              Xavier Denis
maintainer:          xldenis@gmail.com
copyright:           2016 Xavier Denis
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , API
                     , PostsAPI
                     , Config
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server >= 0.4.4.6
                     , wai
                     , warp
                     , either
                     , text
                     , time
                     , opaleye
                     , product-profunctors
                     , mtl
                     , postgresql-simple
                     , servant-lucid >= 0.7

  default-language:    Haskell2010
  extensions:          TypeOperators
                     , DataKinds

executable xavio-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xavio
                     , postgresql-simple

  default-language:    Haskell2010

test-suite xavio-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , xavio
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xldenis/xavio
